[package]
name = "llama-test-matrix"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive", "env"] }
csv = "1"
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
reqwest-eventsource = "0.6"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full", "process"] }
tracing = "0.1"
tracing-subscriber = "0.3"
libc = "0.2"
which = "7"
rand = "0.8"
glob = "0.3"

[dev-dependencies]
tokio-test = "0.4"
